--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "backbone of the project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "ethem suphi",
   "license": "MIT",
   "dependencies": {
     "express": "^4.14.0",
+    "material-design-lite": "^1.1.3",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
@@ -28,7 +30,6 @@
     "file-loader": "^0.9.0",
     "jquery": "^3.0.0",
     "material-design-icons": "^2.2.3",
-    "materialize-css": "^0.97.6",
     "node-sass": "^3.8.0",
     "sass-loader": "^3.2.1",
     "script-loader": "^0.7.0",
