--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "ethem suphi",
   "license": "MIT",
   "dependencies": {
+    "dialog-polyfill": "^0.4.3",
     "express": "^4.14.0",
     "material-design-lite": "^1.1.3",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.0",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-form": "^5.2.5",
     "redux-thunk": "^2.1.0"
