--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "foundation-sites": "^6.2.3",
     "material-design-lite": "^1.1.3",
     "react": "^15.1.0",
+    "react-autosuggest": "^3.7.4",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-responsive": "^1.1.3",
